--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
+    "file-loader": "^1.1.11",
     "style-loader": "^0.18.2",
     "webpack": "^3.2.0",
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "font-awesome": "^4.7.0",
+    "i": "^0.3.6",
+    "npm": "^6.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1"
